--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
+    "firebase": "^9.6.4",
+    "firebase-admin": "^10.0.2",
     "hardhat": "^2.8.2",
     "ipfs-http-client": "^50.1.2",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.0",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
