--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.0",
-    "web3modal": "^1.9.5"
+    "web3modal": "^1.9.5",
+    "tar": ">=4.4.18"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
