--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.2",
+    "ansi-regex": "^5.0.1",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
@@ -20,12 +21,15 @@
     "firebase-admin": "^10.0.2",
     "hardhat": "^2.8.2",
     "ipfs-http-client": "^50.1.2",
+    "json-schema": "^0.4.0",
     "next": "12.0.7",
+    "node-fetch": "^2.6.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.0",
+    "tar": "^4.4.18",
     "web3modal": "^1.9.5",
-    "tar": ">=4.4.18"
+    "ws": "^5.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
