did something for the vuls so far

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ansi-regex": "^5.0.1",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
+    "elliptic": "^6.5.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
     "firebase": "^9.6.4",
@@ -22,14 +23,18 @@
     "hardhat": "^2.8.2",
     "ipfs-http-client": "^50.1.2",
     "json-schema": "^0.4.0",
-    "next": "12.0.7",
+    "lodash": "^4.17.21",
+    "next": "^12.0.9",
     "node-fetch": "^2.6.7",
+    "path-parse": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.0",
     "tar": "^4.4.18",
+    "underscore": "^1.12.1",
     "web3modal": "^1.9.5",
-    "ws": "^5.2.3"
+    "ws": "^5.2.3",
+    "yargs-parser": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
