--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-firebase-hooks": "^5.0.0",
     "tar": "^4.4.18",
     "underscore": "^1.12.1",
+    "web3": "^1.7.0",
     "web3modal": "^1.9.5",
     "ws": "^5.2.3",
     "yargs-parser": "^5.0.1"
