--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.2",
+    "@walletconnect/web3-provider": "^1.7.1",
     "ansi-regex": "^5.0.1",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
@@ -20,16 +21,19 @@
     "ethers": "^5.5.3",
     "firebase": "^9.6.4",
     "firebase-admin": "^10.0.2",
+    "follow-redirects": "^1.14.8",
     "hardhat": "^2.8.2",
     "ipfs-http-client": "^50.1.2",
     "json-schema": "^0.4.0",
     "lodash": "^4.17.21",
+    "moralis": "^1.3.2",
     "next": "^12.0.9",
     "node-fetch": "^2.6.7",
     "path-parse": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.0",
+    "react-moralis": "^1.3.1",
     "tar": "^4.4.18",
     "underscore": "^1.12.1",
     "web3": "^1.7.0",
