--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.2",
     "@walletconnect/web3-provider": "^1.7.1",
+    "@web3auth/web3auth": "^0.3.0",
     "ansi-regex": "^5.0.1",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
@@ -26,6 +27,7 @@
     "ipfs-http-client": "^50.1.2",
     "json-schema": "^0.4.0",
     "lodash": "^4.17.21",
+    "magic-sdk": "^8.0.1",
     "moralis": "^1.3.2",
     "next": "^12.0.9",
     "node-fetch": "^2.6.7",
